--- a/rro_overlays/PixelConfigOverlayCommon/res/values/config.xml
+++ b/rro_overlays/PixelConfigOverlayCommon/res/values/config.xml
@@ -216,7 +216,7 @@
     <string name="config_defaultFieldClassificationService" translatable="false">com.google.android.as/com.google.android.apps.miphone.aiai.app.AutofillFieldClassificationService</string>
 
     <!-- Colon separated list of package names that should be granted Notification Listener access -->
-    <string name="config_defaultListenerAccessPackages" translatable="false">com.google.android.apps.nexuslauncher:com.google.android.setupwizard:com.google.android.apps.pixelmigrate:com.google.android.as:com.google.android.projection.gearhead:com.google.pixel.exo:com.google.ambient.streaming:com.android.launcher3:co.aospa.glyph:io.chaldeaprjkt.gamespace</string>
+    <string name="config_defaultListenerAccessPackages" translatable="false">com.google.android.setupwizard:com.google.android.apps.pixelmigrate:com.google.android.as:com.google.android.projection.gearhead:com.google.pixel.exo:com.google.ambient.streaming:com.android.launcher3:co.aospa.glyph:io.chaldeaprjkt.gamespace</string>
 
     <!-- Component name for the default module metadata provider on this device -->
     <!--string name="config_defaultModuleMetadataProvider" translatable="false">com.google.android.modulemetadata</string-->
@@ -341,13 +341,6 @@
          android.os.action.POWER_SAVE_MODE_CHANGED. -->
     <string name="config_powerSaveModeChangedListenerPackage" translatable="false">com.google.android.flipendo</string>
 
-    <!-- Component name for the activity that will be presenting the Recents UI, which will receive
-         special permissions for API related to fetching and presenting recent tasks. The default
-         configuration uses Launcehr3QuickStep as default launcher and points to the corresponding
-         recents component. When using a different default launcher, change this appropriately or
-         use the default systemui implementation: com.android.systemui/.recents.RecentsActivity -->
-    <string name="config_recentsComponentName" translatable="false">com.google.android.apps.nexuslauncher/com.android.quickstep.RecentsActivity</string>
-
     <!-- The package name for the default retail demo app.
          This package must be trusted, as it has the permissions to query the usage stats on the
          device.
@@ -360,13 +353,6 @@
          device.
      -->
     <string name="config_retailDemoPackageSignature" translatable="false">6547c73dee150c103980bfdffe55cc9a011d785dd694a5f99afd8205bcaf1f80</string>
-
-    <!-- This is the default launcher package with an activity to use on secondary displays that
-         support system decorations.
-         This launcher package must have an activity that supports multiple instances and has
-         corresponding launch mode set in AndroidManifest.
-         {@see android.view.Display#FLAG_SHOULD_SHOW_SYSTEM_DECORATIONS} -->
-    <string name="config_secondaryHomePackage" translatable="false">com.google.android.apps.nexuslauncher</string>
 
     <!-- Package name of the on-device intelligent processor for ambient audio.
          Ambient audio is the sound surrounding the device captured by the DSP
